--- a/package.json
+++ b/package.json
@@ -1,25 +1,66 @@
 {
   "name": "jwtapi-demo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A secure JWT authentication system with comprehensive security features, logging, and CI/CD pipeline",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node test/health.test.js",
+    "test:health": "node test/health.test.js",
+    "test:coverage": "echo 'Coverage tests not implemented yet'",
+    "lint": "echo 'Linting not configured yet'",
+    "lint:fix": "echo 'Linting not configured yet'",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:fix": "npm audit fix",
+    "docker:build": "docker build -t jwt-auth-api .",
+    "docker:run": "docker run -p 3000:3000 jwt-auth-api",
+    "docker:compose": "docker-compose up -d",
+    "docker:compose:dev": "docker-compose -f docker-compose.dev.yml up",
+    "logs:view": "node view-logs.js combined 50",
+    "logs:errors": "node view-logs.js error 20",
+    "logs:debug": "node view-logs.js debug 30",
+    "logs:stats": "node view-logs.js stats"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "jwt",
+    "authentication",
+    "express",
+    "nodejs",
+    "security",
+    "api",
+    "docker",
+    "ci-cd",
+    "logging",
+    "swagger"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "type": "commonjs",
   "dependencies": {
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/jwtapi-demo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/jwtapi-demo/issues"
+  },
+  "homepage": "https://github.com/yourusername/jwtapi-demo#readme"
 }
