--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -73,11 +73,5 @@ jobs:
       with:
         scan-type: 'fs'
         scan-ref: '.'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-        
-    - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v3
-      if: always() && hashFiles('trivy-results.sarif') != ''
-      with:
-        sarif_file: 'trivy-results.sarif' 
+        severity: 'CRITICAL,HIGH'
+        exit-code: '0'  # Don't fail the workflow on vulnerabilities 
